--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,26 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div align="center">
+
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+      <!-- Homepage Leaderboard -->
+
+      <ins class="adsbygoogle"
+
+         style="display:inline-block;width:728px;height:90px"
+
+         data-ad-client="ca-pub-1234567890123456"
+
+         data-ad-slot="1234567890"></ins>
+
+      <script>
+
+         (adsbygoogle = window.adsbygoogle || []).push({});
+
+      </script>
+
+   </div>
   </body>
 </html>
