--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Youtube Clone By Ayush Productions</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,25 +40,24 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <div align="center">
+    
+    <ins class="adsbygoogle"
 
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+     style="display:block"
 
-      <!-- Homepage Leaderboard -->
+          data-ad-client="ca-pub-1648587415625690"
 
-      <ins class="adsbygoogle"
+               data-ad-slot="8732131486"
 
-         style="display:inline-block;width:728px;height:90px"
+                    data-ad-format="auto"
 
-         data-ad-client="ca-pub-1234567890123456"
+                         data-full-width-responsive="true"></ins>
 
-         data-ad-slot="1234567890"></ins>
+                         <script>
 
-      <script>
+                              (adsbygoogle = window.adsbygoogle || []).push({});
 
-         (adsbygoogle = window.adsbygoogle || []).push({});
-
-      </script>
+                              </script>
 
    </div>
   </body>
