--- a/public/index.html
+++ b/public/index.html
@@ -41,24 +41,16 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     
-    <ins class="adsbygoogle"
-
-     style="display:block"
-
-          data-ad-client="ca-pub-1648587415625690"
-
-               data-ad-slot="8732131486"
-
-                    data-ad-format="auto"
-
-                         data-full-width-responsive="true"></ins>
-
-                         <script>
-
-                              (adsbygoogle = window.adsbygoogle || []).push({});
-
-                              </script>
-
-   </div>
+    <div align="center">
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-1648587415625690"
+            data-ad-slot="8732131486"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
   </body>
 </html>
